# moji-chat

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  cspell.config.ts  eslint.config.ts  lint-staged.config.ts  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.ts  rustfmt.toml  skills-lock.json  tsconfig.json
.cspell/: cspell-ext.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
.husky/: pre-commit
crates/moji-chat-logging/: Cargo.toml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  events.rs  lib.rs  main.rs
src-tauri/src/cmd/: auth.rs  mod.rs  window.rs
src-tauri/src/commands/: auth.rs  contact.rs  conversation.rs  mod.rs  window.rs
src-tauri/src/core/: handle.rs  mod.rs  tracing.rs
src-tauri/src/core/window/: mod.rs  routes.rs
src-tauri/src/manager/: app_handle.rs
src-tauri/src/models/: auth.rs  contact.rs  conversation.rs  mod.rs
src-tauri/src/platform/: macos.rs  mod.rs
src-tauri/src/services/: auth.rs  contact.rs  conversation.rs
src-tauri/src/state/: mod.rs
src-tauri/src/utils/: dirs.rs  init.rs  mod.rs  window.rs
src-tauri/src/window/: label.rs  mod.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/(app)/: layout.tsx
src/app/(app)/contacts/: layout.tsx  page.tsx
src/app/(app)/contacts/[contactId]/: page.tsx
src/app/(app)/messages/: layout.tsx  page.tsx
src/app/(app)/messages/[conversationId]/: page.tsx
src/app/(app)/settings/: page.tsx
src/app/(home)/: layout.tsx
src/app/(home)/messages/: layout.tsx  page.tsx
src/app/login/: page.tsx
src/app/settings/: page.tsx
src/bindings/: index.ts  types.ts
src/bindings/commands/: auth.ts  contact.ts  conversation.ts  window.ts
src/components/: app-sidebar.tsx  footer-copyright.tsx  header.tsx  native-behavior.tsx  nav-main.tsx  nav-user.tsx  sidebar.tsx  win-display-controller.tsx
src/components/layout/: app-shell.tsx  sidebar.tsx  three-pane-layout.tsx  two-pane-layout.tsx
src/components/login/: index.ts  login-card.tsx  login-form.tsx  login-hero.tsx  login-scene.tsx  login-secondary-actions.tsx  login-shell.tsx
src/components/ui/: checkbox.tsx  dropdown-menu.tsx  index.ts  listbox.tsx  scroll-area.tsx  sheet.tsx  sidebar.tsx  tooltip.tsx
src/features/contacts/: data.ts  index.ts  store.ts
src/features/contacts/components/: contact-empty.tsx  contact-list.tsx  contact-profile.tsx
src/features/contacts/components/contact-list/: contact-item.tsx  contact-list.tsx  index.ts  list.tsx
src/features/contacts/components/profile/: content.tsx  header.tsx  index.ts  profile.tsx
src/features/home/: feature-cards.tsx  glow-effects.tsx  hero-section.tsx  home.tsx  index.ts  quick-actions.tsx  workspace-preview.tsx
src/features/home/components/: index.ts
src/features/login/: form.tsx  hero.tsx  index.ts  scene.tsx  secondary-actions.tsx  shell.tsx  types.ts  use-login.ts
src/features/messages/: data.ts  index.ts  store.ts
src/features/messages/components/: conversation-empty.tsx  conversation-list.tsx  conversation-view.tsx
src/features/messages/components/conversation-list/: conversation-group.tsx  conversation-item.tsx  conversation-list.tsx  group.tsx  header.tsx  index.ts  item.tsx  list.tsx
src/features/messages/components/conversation-view/: types.ts  (+7 more)
src/features/settings/: constants.ts  index.ts  open-button.tsx  primitives.tsx  view.tsx
src/features/settings/components/: open-settings-button.tsx  settings-primitives.tsx  settings-view.tsx  theme-segment.tsx
src/hooks/: use-login.ts
src/lib/: feign-desktop.ts  providers.tsx  tailwind-merge.ts  utils.ts  window.ts
src/platform/: native-behavior.tsx  use-disable-context-menu.ts  win-display-controller.tsx
src/services/: auth.ts  window.ts
src/store/: ui.ts
(+8 files in other folders)
