[workspace]
members = ["src-tauri", "crates/moji-chat-logging"]
resolver = "2"


[profile.release]
codegen-units = 1
debug = 1
incremental = false
lto = true
opt-level = "s"
panic = "abort"
strip = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
moji-chat-logging = { path = "crates/moji-chat-logging" }

fake = { version = "5.1.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
tauri = { version = "2", features = [] }
tauri-plugin-http = { version = "2", features = ["unsafe-headers", "json"] }
tauri-plugin-macos-fps = "0.1.0"
tauri-plugin-shell = "2.3.5"
thiserror = "2"
tokio = { version = "1.52.3", features = ["tokio-macros", "macros"] }
wiremock = { version = "0.6.5" }

tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = "0.3.23"
