[package]
authors = ["Clover You <hi@clovu.me>"]
description = "A Tauri App template with NextJS"
edition = "2024"
name = "moji-chat"
version = "0.1.0"

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "moji_chat_lib"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-shell = "2.3.5"
tokio = { version = "1.52.3", features = ["tokio-macros", "macros"] }

[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.6.4"
objc2-app-kit = "0.3.2"
