[package]
authors = ["Clover You <hi@clovu.me>"]
description = "A Tauri App template with NextJS"
edition = "2024"
name = "moji-chat"
version = "0.1.0"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "moji_chat_lib"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
moji-chat-logging.workspace = true

fake.workspace = true
serde.workspace = true
serde_json = "1.0.150"
tauri.workspace = true
tauri-plugin-http = { workspace = true, features = ["unsafe-headers", "json"] }
tauri-plugin-macos-fps.workspace = true
tauri-plugin-shell.workspace = true
thiserror = "2"
tokio = { workspace = true, features = ["tokio-macros", "macros"] }
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
wiremock = { workspace = true, optional = true }


[features]
default = ["mock-server"]
mock-server = ["dep:wiremock"]

[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.6.4"
objc2-app-kit = "0.3.2"
